start config :smile

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-403b86db-481c-4da9-9bd0-b1258509087f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
