void init :smile

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-403b86db-481c-4da9-9bd0-b1258509087f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=dbsistema;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
